objects/TrackUser__c.object
<CustomObject>
    <fields>
        <fullName>Name_Level_2__c</fullName>
        <label>Name Level 2</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Name_Level_3__c</fullName>
        <label>Name Level 3</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Name__c</fullName>
        <label>Name</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Name__c</fullName>
        <label>Product Name</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <customSettingsType>List</customSettingsType>
    <description>It is used in track implementation</description>
    <label>Track UserProductWise</label>
    <listViews>
        <fullName>All_Data</fullName>
        <columns>NAME</columns>
        <columns>Name__c</columns>
        <columns>Name_Level_2__c</columns>
        <columns>Name_Level_3__c</columns>
        <columns>Product_Name__c</columns>
        <filterScope>Everything</filterScope>
        <label>All Data</label>
        <language>en_US</language>
    </listViews>
</CustomObject>